...
                                </state>
                                <connections>
                                    <action selector="loginButtonTrigger:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PD4-iq-pYf"/>
                                    <segue destination="9aj-dW-bGs" kind="show" identifier="segueLogin" id="JY4-p9-4MM"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mot de passe" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QDZ-jE-X8m" customClass="HoshiTextField" customModule="TextFieldEffects">
                                <rect key="frame" x="51" y="269" width="273" height="54"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="Email"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="borderInactiveColor">
                                        <color key="value" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                    </userDefinedRuntimeAttribute>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="I6k-9B-ELS" id="sIe-Md-qaN"/>
                            <outlet property="delegate" destination="I6k-9B-ELS" id="sKj-Yr-70a"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contacts" id="sWd-k1-BlT">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cLB-iK-qhh">
                            <connections>
                                <segue destination="MrA-mw-WY3" kind="show" identifier="addAContactSegue" id="qly-sY-Gxy"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="MrA-mw-WY3" id="xIt-H3-sTG"/>
                            <outlet property="delegate" destination="MrA-mw-WY3" id="Bxz-r8-smw"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add a contact" largeTitleDisplayMode="always" id="D5m-QH-yCV">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="wWJ-mK-4QZ">
                            <connections>
                                <action selector="addAContact:" destination="MrA-mw-WY3" id="QyU-MX-KAt"/>
                                <segue destination="I6k-9B-ELS" kind="show" identifier="backSegue" id="mh1-Mm-b1j"/>
                            </connections>
                        </barButtonItem>
...
                                        <rect key="frame" x="0.0" y="158" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="A86-ZG-v9h" id="pvC-9U-27G">
                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6z9-Lt-mTX">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="89x-Om-xqK" id="jpt-Ls-lfs"/>
                            <outlet property="delegate" destination="89x-Om-xqK" id="EXI-68-ABl"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" largeTitleDisplayMode="always" id="FCC-bT-I0e"/>
                    <connections>
                        <outlet property="PersonNames" destination="2Kn-Sc-jLM" id="Dj1-FW-Jlm"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="TLs-rL-qFI" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
