...
"11e-zG-jP6.normalTitle" = "Next";

/* Class = "UILabel"; text = "Quel est votre adresse email ?"; ObjectID = "1zg-hs-j1l"; */
"1zg-hs-j1l.text" = "Quel est votre adresse email ?";

/* Class = "UIButton"; normalTitle = "CONNEXION"; ObjectID = "7Tq-4v-ojc"; */
"7Tq-4v-ojc.normalTitle" = "SIGN IN";

/* Class = "UIButton"; normalTitle = "INSCRIPTION"; ObjectID = "7fY-4k-SwU"; */
"7fY-4k-SwU.normalTitle" = "SIGN UP";

/* Class = "UILabel"; text = "Se connecter"; ObjectID = "7n7-YY-bsp"; */
"7n7-YY-bsp.text" = "Connect";

/* Class = "UITextField"; placeholder = "Email"; ObjectID = "EAj-9r-FHw"; */
"EAj-9r-FHw.placeholder" = "Email";

/* Class = "UIButton"; normalTitle = "Connexion"; ObjectID = "J89-mo-4f6"; */
"J89-mo-4f6.normalTitle" = "Connection";

/* Class = "UITextField"; placeholder = "Date de naissance"; ObjectID = "PPU-FO-ozb"; */
"PPU-FO-ozb.placeholder" = "Date de naissance";

/* Class = "UILabel"; text = "NEO"; ObjectID = "RMz-DW-bsm"; */
"RMz-DW-bsm.text" = "NEO";
...
